--- a/app/src/main/res/layout/sight_item.xml
+++ b/app/src/main/res/layout/sight_item.xml
@@ -52,6 +52,18 @@
             android:textColor="#FF979797"
             android:textSize="15sp" />
 
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="345dp"
+            android:layout_marginTop="4dp"
+            android:background="@android:color/transparent"
+            android:onClick="isStared"
+            android:scaleType="centerInside"
+            android:tint="#FF979797"
+            app:srcCompat="@drawable/star" />
+
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
