--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -19,13 +20,15 @@
             android:layout_width="394dp"
             android:layout_height="257dp"
             android:layout_marginTop="-6dp"
-            app:srcCompat="@drawable/ic_launcher_background" />
+            android:scaleType="fitXY"
+            app:srcCompat="@drawable/ic_launcher_background"
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <ImageButton
             android:id="@+id/imageButtonStar"
             android:layout_width="54dp"
             android:layout_height="47dp"
-            android:layout_marginStart="332dp"
+            android:layout_marginStart="338dp"
             android:layout_marginTop="4dp"
             android:background="@android:color/transparent"
             android:onClick="isStared"
@@ -34,17 +37,6 @@
             app:srcCompat="@drawable/star"
             tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
-        <Button
-            android:id="@+id/buttonBack"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-            android:layout_width="52dp"
-            android:layout_height="37dp"
-            android:layout_marginStart="7dp"
-            android:layout_marginTop="6dp"
-            android:onClick="back"
-            app:icon="@drawable/back"
-            app:iconTint="#d4dbe4"
-            app:strokeColor="#d4dbe4" />
     </androidx.cardview.widget.CardView>
 
     <ScrollView
@@ -58,6 +50,21 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/buttonBack"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_width="52dp"
+                android:layout_height="37dp"
+                android:layout_marginStart="7dp"
+                android:layout_marginTop="20dp"
+                android:onClick="back"
+                app:icon="@drawable/back"
+                app:iconTint="#d4dbe4"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editTextComment"
+                app:strokeColor="#d4dbe4"
+                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
             <Button
                 android:id="@+id/button"
@@ -78,44 +85,46 @@
                 android:id="@+id/editTextComment"
                 android:layout_width="354dp"
                 android:layout_height="43dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginStart="22dp"
+                android:layout_marginTop="7dp"
                 android:ems="10"
                 android:gravity="start|top"
                 android:hint="Комментарий"
                 android:inputType="textMultiLine"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextName" />
+                app:layout_constraintTop_toBottomOf="@+id/editTextName"
+                tools:ignore="TouchTargetSizeCheck" />
 
             <EditText
                 android:id="@+id/editTextName"
                 android:layout_width="199dp"
                 android:layout_height="43dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="13dp"
+                android:layout_marginStart="22dp"
+                android:layout_marginTop="5dp"
                 android:ems="10"
                 android:hint="Имя"
                 android:inputType="textPersonName"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewRev" />
+                app:layout_constraintTop_toBottomOf="@+id/textViewRev"
+                tools:ignore="TouchTargetSizeCheck" />
 
             <TextView
                 android:id="@+id/textViewRev"
                 android:layout_width="355dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="26dp"
-                android:layout_marginTop="2dp"
+                android:layout_marginTop="6dp"
                 android:text="TextView"
                 android:textColor="#d4dbe4"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewAdress" />
+                app:layout_constraintTop_toBottomOf="@+id/map" />
 
             <TextView
                 android:id="@+id/textViewArchitect"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="26dp"
-                android:layout_marginTop="76dp"
+                android:layout_marginTop="64dp"
                 android:text="TextView"
                 android:textColor="#d4dbe4"
                 app:layout_constraintStart_toStartOf="parent"
@@ -123,14 +132,14 @@
 
             <TextView
                 android:id="@+id/textViewName"
-                android:layout_width="236dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="76dp"
-                android:layout_marginTop="8dp"
+                android:layout_width="309dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="4dp"
                 android:fontFamily="@font/balsamiqbold"
                 android:textAlignment="center"
                 android:textColor="#d4dbe4"
-                android:textSize="25sp"
+                android:textSize="22sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -139,7 +148,7 @@
                 android:layout_width="355dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="26dp"
-                android:layout_marginTop="98dp"
+                android:layout_marginTop="86dp"
                 android:text="TextView"
                 android:textColor="#d4dbe4"
                 app:layout_constraintStart_toStartOf="parent"
@@ -150,7 +159,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="26dp"
-                android:layout_marginTop="54dp"
+                android:layout_marginTop="42dp"
                 android:text="TextView"
                 android:textColor="#d4dbe4"
                 app:layout_constraintStart_toStartOf="parent"
@@ -166,6 +175,18 @@
                 android:textColor="#d4dbe4"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />
+
+            <fragment
+                android:id="@+id/map"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="348dp"
+                android:layout_height="348dp"
+                android:layout_marginStart="26dp"
+                android:layout_marginTop="4dp"
+                android:layout_weight="1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textViewAdress" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
