--- a/app/src/main/res/layout/activity_sightdetail.xml
+++ b/app/src/main/res/layout/activity_sightdetail.xml
@@ -22,7 +22,7 @@
             android:layout_marginTop="-6dp"
             android:scaleType="fitXY"
             app:srcCompat="@drawable/ic_launcher_background"
-            tools:ignore="SpeakableTextPresentCheck" />
+            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
 
         <ImageButton
             android:id="@+id/imageButtonStar"
@@ -35,7 +35,7 @@
             android:scaleType="centerInside"
             app:srcCompat="@drawable/star"
             app:tint="#979797"
-            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,ImageContrastCheck" />
 
     </androidx.cardview.widget.CardView>
 
@@ -51,62 +51,148 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintLayout"
+                android:layout_width="365dp"
+                android:layout_height="152dp"
+                android:layout_marginStart="14dp"
+                android:layout_marginTop="4dp"
+                android:background="@drawable/radius_layout"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textViewRev">
+
+                <ImageButton
+                    android:id="@+id/star3"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_marginStart="3dp"
+                    android:layout_marginTop="6dp"
+                    android:background="@android:color/transparent"
+                    android:onClick="clickStar3"
+                    android:scaleType="centerInside"
+                    android:tint="#979797"
+                    app:layout_constraintStart_toEndOf="@+id/star2"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/star"
+                    tools:ignore="SpeakableTextPresentCheck" />
+
+                <ImageButton
+                    android:id="@+id/star2"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginTop="6dp"
+                    android:background="@android:color/transparent"
+                    android:onClick="clickStar2"
+                    android:scaleType="centerInside"
+                    android:tint="#979797"
+                    app:layout_constraintStart_toEndOf="@+id/star1"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/star"
+                    tools:ignore="SpeakableTextPresentCheck" />
+
+                <ImageButton
+                    android:id="@+id/star4"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginTop="6dp"
+                    android:background="@android:color/transparent"
+                    android:onClick="clickStar4"
+                    android:scaleType="centerInside"
+                    android:tint="#979797"
+                    app:layout_constraintStart_toEndOf="@+id/star3"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/star"
+                    tools:ignore="SpeakableTextPresentCheck" />
+
+                <ImageButton
+                    android:id="@+id/star1"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="6dp"
+                    android:background="@android:color/transparent"
+                    android:onClick="clickStar1"
+                    android:scaleType="centerInside"
+                    android:tint="#979797"
+                    app:layout_constraintStart_toEndOf="@+id/editTextName"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/star"
+                    tools:ignore="SpeakableTextPresentCheck" />
+
+                <ImageButton
+                    android:id="@+id/star5"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginTop="6dp"
+                    android:background="@android:color/transparent"
+                    android:onClick="clickStar5"
+                    android:scaleType="centerInside"
+                    android:tint="#979797"
+                    app:layout_constraintStart_toEndOf="@+id/star4"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/star"
+                    tools:ignore="SpeakableTextPresentCheck" />
+
+                <EditText
+                    android:id="@+id/editTextName"
+                    android:layout_width="160dp"
+                    android:layout_height="43dp"
+                    android:layout_marginStart="6dp"
+                    android:layout_marginTop="1dp"
+                    android:ems="10"
+                    android:hint="Имя"
+                    android:inputType="textPersonName"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:ignore="TouchTargetSizeCheck" />
+
+                <EditText
+                    android:id="@+id/editTextComment"
+                    android:layout_width="353dp"
+                    android:layout_height="46dp"
+                    android:layout_marginStart="6dp"
+                    android:layout_marginTop="50dp"
+                    android:ems="10"
+                    android:gravity="start|top"
+                    android:hint="Комментарий"
+                    android:inputType="textMultiLine"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:ignore="TouchTargetSizeCheck" />
+
+                <Button
+                    android:id="@+id/button"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="124dp"
+                    android:layout_marginTop="100dp"
+                    android:onClick="addRev"
+                    android:text="Добавить"
+                    android:textAlignment="center"
+                    android:textColor="#d4dbe4"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:strokeColor="#d4dbe4" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
             <Button
                 android:id="@+id/buttonBack"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="52dp"
                 android:layout_height="37dp"
                 android:layout_marginStart="7dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="4dp"
                 android:onClick="back"
                 app:icon="@drawable/back"
                 app:iconTint="#d4dbe4"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextComment"
+                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                 app:strokeColor="#d4dbe4"
                 tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
-
-            <Button
-                android:id="@+id/button"
-                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="136dp"
-                android:layout_marginTop="4dp"
-                android:onClick="addRev"
-                android:text="Добавить"
-                android:textAlignment="center"
-                android:textColor="#d4dbe4"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextComment"
-                app:strokeColor="#d4dbe4" />
-
-            <EditText
-                android:id="@+id/editTextComment"
-                android:layout_width="354dp"
-                android:layout_height="43dp"
-                android:layout_marginStart="22dp"
-                android:layout_marginTop="7dp"
-                android:ems="10"
-                android:gravity="start|top"
-                android:hint="Комментарий"
-                android:inputType="textMultiLine"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextName"
-                tools:ignore="TouchTargetSizeCheck" />
-
-            <EditText
-                android:id="@+id/editTextName"
-                android:layout_width="199dp"
-                android:layout_height="43dp"
-                android:layout_marginStart="22dp"
-                android:layout_marginTop="5dp"
-                android:ems="10"
-                android:hint="Имя"
-                android:inputType="textPersonName"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewRev"
-                tools:ignore="TouchTargetSizeCheck" />
 
             <TextView
                 android:id="@+id/textViewRev"
