--- a/app/src/main/res/layout/activity_sightdetail.xml
+++ b/app/src/main/res/layout/activity_sightdetail.xml
@@ -12,8 +12,8 @@
         android:id="@+id/streetviewpanorama2"
         android:name="com.google.android.gms.maps.SupportStreetViewPanoramaFragment"
         android:layout_width="wrap_content"
-        android:layout_height="769dp"
-        android:layout_marginTop="36dp"
+        android:layout_height="758dp"
+        android:layout_marginTop="48dp"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,7 +23,8 @@
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="52dp"
         android:layout_height="37dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginTop="6dp"
         android:gravity="top"
         android:onClick="backPanorama"
         app:icon="@drawable/back"
@@ -66,7 +67,7 @@
     <ScrollView
         android:id="@+id/scrollview"
         android:layout_width="405dp"
-        android:layout_height="475dp"
+        android:layout_height="555dp"
         android:layout_marginStart="1dp"
         android:layout_marginTop="251dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -145,25 +146,10 @@
                 app:layout_constraintTop_toBottomOf="@+id/textViewAdress" />
 
             <Button
-                android:id="@+id/buttonBack"
-                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                android:layout_width="52dp"
-                android:layout_height="37dp"
-                android:layout_marginStart="324dp"
-                android:layout_marginTop="4dp"
-                android:gravity="top"
-                android:onClick="back"
-                app:icon="@drawable/back"
-                app:iconTint="#d4dbe4"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/map"
-                app:strokeColor="#d4dbe4" />
-
-            <Button
                 android:id="@+id/button"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_marginStart="24dp"
                 android:onClick="panoramaView"
                 android:text="Панорама"
@@ -171,6 +157,34 @@
                 app:iconTint="#d4dbe4"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/map"
+                app:strokeColor="#d4dbe4" />
+
+            <Button
+                android:id="@+id/button3"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_width="223dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="152dp"
+                android:onClick="url"
+                android:text="Официальный сайт"
+                android:textAlignment="center"
+                android:textColor="#d4dbe4"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/map"
+                app:rippleColor="#d4dbe4"
+                app:strokeColor="#d4dbe4" />
+
+            <Button
+                android:id="@+id/buttonBack"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_width="52dp"
+                android:layout_height="34dp"
+                android:layout_marginStart="1dp"
+                android:onClick="back"
+                app:icon="@drawable/back"
+                app:iconTint="#d4dbe4"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 app:strokeColor="#d4dbe4" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
